--- a/.hgignore
+++ b/.hgignore
@@ -2,8 +2,9 @@
 \.sw[op]$
 \.orig$
 \.pyc$
-tools/pttest
-tools/sptdemo
+tools/pttest$
+tools/sptdemo$
+tools/prctl_demo$
 tools/ps_status\.[ch]
 build
 dist
