'MANIFEST.in' added to the source distribution
Needed to build RPMs out of the sdist or from PyPI (issues #30, #32).

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include HISTORY.rst
 include README.rst
 include COPYRIGHT
+include MANIFEST.in
 include MANIFEST
 include Makefile
 include src/*.c
