--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,16 @@ matrix:
     - env: TOXENV=py38
       python: 3.8
 
+    - env:
+        - TOXENV=py39
+        # package not built correctly: --prefix=/usr/
+        - LD_LIBRARY_PATH=/opt/python/3.9-dev/lib/
+      python: 3.9-dev
 
 install:
   - pip install tox
 
 
 script:
-  - export LD_LIBRARY_PATH=$(python-config --prefix)/lib
+  - test "${LD_LIBRARY_PATH}" || export LD_LIBRARY_PATH=$(python-config --prefix)/lib
   - tox
