Use the "extras" tox feature to install test dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,8 @@ envlist = 3.6, 3.7, 3.8, 3.9, pypy3
 [testenv]
 commands =
     pytest -vsrx
-deps =
-    .[test]
+extras =
+    test
 
 [testenv:3.6]
 basepython = python3.6
