Tests output in colours

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,4 +22,4 @@ jobs:
         run: pip install tox
 
       - name: Run tests
-        run: tox -e ${{matrix.python-version}}
+        run: tox -e ${{matrix.python-version}} -- -vrsx --color=yes
