--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -36,7 +36,7 @@ jobs:
       max-parallel: 100
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9]
-        architecutre: ['x64', 'x86']
+        architecture: ['x64', 'x86']
 
     steps:
     - name: Checkout repos
@@ -46,6 +46,7 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
+        architecture: ${{matrix.architecture}}
 
     - name: Install Python dependencies
       shell: cmd
