--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,7 @@ jobs:
       max-parallel: 100
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9]
+        architecture: ['x64', 'x86']
 
     steps:
     - name: Checkout repos
@@ -40,6 +41,7 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
+        architecture: ${{matrix.architecture}}
 
     - name: Install Tox
       run: pip install tox
