--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -1,4 +1,4 @@
-name: Build packages
+name: Packages
 on: [workflow_dispatch]
 jobs:
   build-manylinux:
@@ -33,19 +33,18 @@ jobs:
     name: Build Windows packages
     runs-on: windows-latest
     strategy:
-      max-parallel: 100
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9]
         architecture: ['x64', 'x86']
 
     steps:
     - name: Checkout repos
-      uses: actions/checkout@v1
+      uses: actions/checkout@v2
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+    - name: Set up Python ${{matrix.python-version}}
+      uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: ${{matrix.python-version}}
         architecture: ${{matrix.architecture}}
 
     - name: Install Python dependencies
@@ -57,7 +56,7 @@ jobs:
       run: python setup.py bdist_wheel
 
     - name: Upload artifacts
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v2
       with:
           name: windows_packages
           path: dist
