Build MacOS packages

--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -115,3 +115,34 @@ jobs:
         with:
           name: packages_windows
           path: dist
+
+
+  build-macos-x64:
+    name: Build MacOS packages
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8, 3.9]
+
+    steps:
+      - name: Checkout repos
+        uses: actions/checkout@v2
+
+      - name: Set up Python ${{matrix.python-version}}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{matrix.python-version}}
+
+      - name: Install Python dependencies
+        shell: bash
+        run: pip install wheel
+
+      - name: Build macos-x64 packages
+        shell: bash
+        run: python setup.py bdist_wheel
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: packages_macos
+          path: dist
