--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,14 +13,14 @@ jobs:
       - name: Checkout repos
         uses: actions/checkout@v2
 
-      - name: Set up Python
+      - name: Set up Python ${{matrix.python-version}}
         uses: actions/setup-python@v2
         with:
           python-version: ${{matrix.python-version}}
           architecture: x64
         if: ${{ matrix.python-version != '3.10'}}
 
-      - name: Set up Python
+      - name: Set up Python 3.10
         uses: actions/setup-python@v2
         with:
           python-version: "3.10.0-alpha - 3.10.0"
@@ -38,8 +38,8 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
-        architecture: ['x64', 'x86']
+        python-version: [3.6, 3.7, 3.8, 3.9, 3.10]
+        architecture: ["x64", "x86"]
 
     steps:
       - name: Checkout repos
@@ -50,6 +50,14 @@ jobs:
         with:
           python-version: ${{matrix.python-version}}
           architecture: ${{matrix.architecture}}
+        if: ${{ matrix.python-version != '3.10'}}
+
+      - name: Set up Python ${{matrix.python-version}}
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.10.0-alpha - 3.10.0"
+          architecture: ${{matrix.architecture}}
+        if: ${{ matrix.python-version == '3.10'}}
 
       - name: Install Tox
         run: pip install tox
