--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
           architecture: x64
 
       - name: Install Tox
-        run: pip install tox
+        run: pip install tox tox-gh-actions
 
       - name: Run tests
         run: tox -- -vrsx --color=yes
