--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,13 @@
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    3.10: py310
+
 [tox]
-envlist = 3.6, 3.7, 3.8, 3.9, 3.10, pypy3
+envlist = py36, py37, py38, py39, py310, pypy3
 
 [testenv]
 commands =
@@ -7,17 +15,17 @@ commands =
 extras =
     test
 
-[testenv:3.6]
+[testenv:py36]
 basepython = python3.6
 
-[testenv:3.7]
+[testenv:py37]
 basepython = python3.7
 
-[testenv:3.8]
+[testenv:py38]
 basepython = python3.8
 
-[testenv:3.9]
+[testenv:py39]
 basepython = python3.9
 
-[testenv:3.10]
+[testenv:py310]
 basepython = python3.10
