--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Build i686 packages
         uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2014_i686
         with:
-          python-versions: "cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39"
+          python-versions: "cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39 cp310-cp310"
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
@@ -50,7 +50,7 @@ jobs:
       - name: Build x86_64 packages
         uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2014_x86_64
         with:
-          python-versions: "cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39"
+          python-versions: "cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39 cp310-cp310"
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
@@ -74,7 +74,7 @@ jobs:
       - name: Build aarch64 packages
         uses: RalfG/python-wheels-manylinux-build@v0.3.3-manylinux2014_aarch64
         with:
-          python-versions: "cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39"
+          python-versions: "cp36-cp36m cp37-cp37m cp38-cp38 cp39-cp39 cp310-cp310"
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
@@ -89,7 +89,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: [3.6, 3.7, 3.8, 3.9, "3.10"]
         architecture: ['x64', 'x86']
 
     steps:
