--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = 3.6, 3.7, 3.8, 3.9, pypy3
+envlist = 3.6, 3.7, 3.8, 3.9, 3.10 pypy3
 
 [testenv]
 commands =
@@ -18,3 +18,6 @@ basepython = python3.8
 
 [testenv:3.9]
 basepython = python3.9
+
+[testenv:3.10]
+basepython = python3.10
