--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,7 @@ jobs:
     name: Python ${{matrix.python-version}} tests on Linux
     runs-on: ubuntu-20.04
     strategy:
+      fail-fast: false
       matrix:
         python-version: ["3.6", "3.7", "3.8", "3.9", "3.10", "pypy3"]
 
@@ -29,6 +30,7 @@ jobs:
     name: Python ${{matrix.python-version}} tests on Windows ${{matrix.architecture}}
     runs-on: windows-latest
     strategy:
+      fail-fast: false
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9, "3.10"]
         architecture: ['x64', 'x86']
