test: add macOS tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,6 @@ name: Tests
 on: [push]
 jobs:
   linux-tests:
-    name: Python ${{matrix.python-version}} tests on Linux
     runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
@@ -27,7 +26,6 @@ jobs:
         run: tox -e ${{matrix.python-version}} -- -vrsx --color=yes
 
   windows-tests:
-    name: Python ${{matrix.python-version}} tests on Windows ${{matrix.architecture}}
     runs-on: windows-latest
     strategy:
       fail-fast: false
@@ -44,6 +42,28 @@ jobs:
         with:
           python-version: ${{matrix.python-version}}
           architecture: ${{matrix.architecture}}
+
+      - name: Install Tox
+        run: pip install tox
+
+      - name: Run tests
+        run: tox -e ${{matrix.python-version}} -- -vrsx --color=yes
+
+  macos-tests:
+    runs-on: macos-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: [3.6, 3.7, 3.8, 3.9, "3.10"]
+
+    steps:
+      - name: Checkout repos
+        uses: actions/checkout@v2
+
+      - name: Set up Python ${{matrix.python-version}}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{matrix.python-version}}
 
       - name: Install Tox
         run: pip install tox
