--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Checkout repos
         uses: actions/checkout@v2
 
+      - name: Set up QEMU for multi-arch build
+        uses: docker/setup-qemu-action@v1
+
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.4.0
         env:
