--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -40,7 +40,12 @@ jobs:
           # Passing a space in a param is a b*tch on windows.
           # However embedded tests are skipped anyway there.
           CIBW_TEST_COMMAND_WINDOWS: pytest --color=yes {project}/tests
-          CIBW_TEST_SKIP: "*-macosx_universal2:arm64 pp*-macosx_*"
+          # musllinux tests fail with some pid mixup
+          # cross-build macos images can't be tested on this runner.
+          CIBW_TEST_SKIP: >-
+            *-musllinux_*
+            *-macosx_universal2:arm64
+            pp*-macosx_*
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
