--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -24,6 +24,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04, windows-latest, macos-latest]
+        pyver: [cp36, cp37, cp38, cp39, cp310]
 
     steps:
       - name: Checkout repos
@@ -32,9 +33,10 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.4.0
         env:
-          CIBW_ARCHS_LINUX: "auto"
-          CIBW_ARCHS_MACOS: "auto universal2"
-          CIBW_ARCHS_WINDOWS: "auto"
+          CIBW_BUILD: ${{matrix.pyver}}-*
+          CIBW_ARCHS_LINUX: auto
+          CIBW_ARCHS_MACOS: auto universal2
+          CIBW_ARCHS_WINDOWS: auto
           CIBW_TEST_EXTRAS: test
           CIBW_TEST_COMMAND: pytest --color=yes -m 'not embedded' {project}/tests
           # Passing a space in a param is a b*tch on windows.
@@ -57,6 +59,9 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
+      matrix:
+        pyver: [cp36, cp37, cp38, cp39, cp310]
+        arch: [aarch64, ppc64le]
 
     steps:
       - name: Checkout repos
@@ -68,7 +73,66 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.4.0
         env:
-          CIBW_ARCHS_LINUX: "aarch64 ppc64le"
+          CIBW_BUILD: ${{matrix.pyver}}-*
+          CIBW_ARCHS: ${{matrix.arch}}
+
+      # Tests mostly fail because of some confusion with the python interpreter
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          path: ./wheelhouse/*.whl
+
+
+  build-wheel-pypy:
+    runs-on: ${{matrix.os}}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-20.04, windows-latest, macos-latest]
+
+    steps:
+      - name: Checkout repos
+        uses: actions/checkout@v2
+
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.4.0
+        env:
+          CIBW_BUILD: pp*
+          CIBW_TEST_EXTRAS: test
+          CIBW_TEST_COMMAND: pytest --color=yes -m 'not embedded' {project}/tests
+          # Passing a space in a param is a b*tch on windows.
+          # However embedded tests are skipped anyway there.
+          CIBW_TEST_COMMAND_WINDOWS: pytest --color=yes {project}/tests
+          # musllinux tests fail with some pid mixup
+          # cross-build macos images can't be tested on this runner.
+          CIBW_TEST_SKIP: >-
+            *-musllinux_*
+            *-macosx_universal2:arm64
+            pp*-macosx_*
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          path: ./wheelhouse/*.whl
+
+
+  build-cross-wheel-pypy:
+    runs-on: ubuntu-20.04
+    strategy:
+      fail-fast: false
+
+    steps:
+      - name: Checkout repos
+        uses: actions/checkout@v2
+
+      - name: Set up QEMU for multi-arch build
+        uses: docker/setup-qemu-action@v1
+
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.4.0
+        env:
+          CIBW_BUILD: pp*
 
       # Tests mostly fail because of some confusion with the python interpreter
 
