--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -24,7 +24,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04, windows-latest, macos-latest]
-        pyver: [cp36, cp37, cp38, cp39, cp310]
+        pyver: [cp37, cp38, cp39, cp310]
 
     steps:
       - name: Checkout repos
@@ -60,7 +60,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        pyver: [cp36, cp37, cp38, cp39, cp310]
+        pyver: [cp37, cp38, cp39, cp310]
         arch: [aarch64, ppc64le]
 
     steps:
