--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,11 @@
 [tox]
-envlist = 3.6, 3.7, 3.8, 3.9, 3.10 pypy3
+envlist = 3.7, 3.8, 3.9, 3.10 pypy-3.8
 
 [testenv]
 commands =
     pytest {posargs}
 extras =
     test
-
-[testenv:3.6]
-basepython = python3.6
 
 [testenv:3.7]
 basepython = python3.7
