--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,10 @@
 ---
 name: Tests
-on: [push]
+on:
+  - push
+
 jobs:
+
   linux-tests:
     runs-on: ubuntu-20.04
     strategy:
@@ -11,10 +14,10 @@ jobs:
 
     steps:
       - name: Checkout repos
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{matrix.python-version}}
           architecture: x64
@@ -24,6 +27,7 @@ jobs:
 
       - name: Run tests
         run: tox -e ${{matrix.python-version}} -- -vrsx --color=yes
+
 
   windows-tests:
     runs-on: windows-latest
@@ -35,10 +39,10 @@ jobs:
 
     steps:
       - name: Checkout repos
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Python ${{matrix.python-version}}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{matrix.python-version}}
           architecture: ${{matrix.architecture}}
@@ -49,6 +53,7 @@ jobs:
       - name: Run tests
         run: tox -e ${{matrix.python-version}} -- -vrsx --color=yes
 
+
   macos-tests:
     runs-on: macos-latest
     strategy:
@@ -58,10 +63,10 @@ jobs:
 
     steps:
       - name: Checkout repos
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Python ${{matrix.python-version}}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{matrix.python-version}}
 
@@ -71,12 +76,13 @@ jobs:
       - name: Run tests
         run: tox -e ${{matrix.python-version}} -- -vrsx --color=yes
 
+
   macos-native-python-test:
     runs-on: macos-latest
 
     steps:
       - name: Checkout repos
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Install Tox
         run: xcrun python3 -m pip install tox
