ci: configure pypy to run with tox 4

--- a/tox.ini
+++ b/tox.ini
@@ -19,5 +19,8 @@ basepython = python3.9
 [testenv:3.10]
 basepython = python3.10
 
+[testenv:pypy-3.8]
+basepython = pypy3.8
+
 [testenv:xcode]
 basepython = {env:XCODE_PYTHON}
