--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -27,14 +27,14 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04, windows-latest, macos-latest]
-        pyver: [cp37, cp38, cp39, cp310]
+        pyver: [cp37, cp38, cp39, cp310, cp311]
 
     steps:
       - name: Checkout repos
         uses: actions/checkout@v3
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.8.1
+        uses: pypa/cibuildwheel@v2.11.1
         env:
           CIBW_BUILD: ${{matrix.pyver}}-*
           CIBW_ARCHS_LINUX: auto
@@ -63,7 +63,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        pyver: [cp37, cp38, cp39, cp310]
+        pyver: [cp37, cp38, cp39, cp310, cp311]
         arch: [aarch64, ppc64le]
 
     steps:
@@ -74,7 +74,7 @@ jobs:
         uses: docker/setup-qemu-action@v2
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.8.1
+        uses: pypa/cibuildwheel@v2.11.1
         env:
           CIBW_BUILD: ${{matrix.pyver}}-*
           CIBW_ARCHS: ${{matrix.arch}}
@@ -99,7 +99,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.8.1
+        uses: pypa/cibuildwheel@v2.11.1
         env:
           CIBW_BUILD: pp*
           CIBW_TEST_EXTRAS: test
@@ -133,7 +133,7 @@ jobs:
         uses: docker/setup-qemu-action@v2
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.8.1
+        uses: pypa/cibuildwheel@v2.11.1
         env:
           CIBW_BUILD: pp*
 
