--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = 3.7, 3.8, 3.9, 3.10, 3.11, pypy-3.8
+envlist = 3.7, 3.8, 3.9, 3.10, 3.11, 3.12, pypy-3.8
 
 [testenv]
 commands =
@@ -21,6 +21,9 @@ basepython = python3.10
 
 [testenv:3.11]
 basepython = python3.11
+
+[testenv:3.12]
+basepython = python3.12
 
 [testenv:pypy-3.8]
 basepython = pypy3.8
