--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -27,7 +27,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04, windows-latest, macos-latest]
-        pyver: [cp37, cp38, cp39, cp310, cp311]
+        pyver: [cp37, cp38, cp39, cp310, cp311, cp312]
 
     steps:
       - name: Checkout repos
@@ -63,7 +63,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        pyver: [cp37, cp38, cp39, cp310, cp311]
+        pyver: [cp37, cp38, cp39, cp310, cp311, cp312]
         arch: [aarch64, ppc64le]
 
     steps:
