--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = 3.7, 3.8, 3.9, 3.10, 3.11, 3.12, pypy-3.8
+envlist = 3.7, 3.8, 3.9, 3.10, 3.11, 3.12, 3.13, pypy-3.8, pypy-3.9, pypy-3.10
 
 [testenv]
 commands =
@@ -25,8 +25,17 @@ basepython = python3.11
 [testenv:3.12]
 basepython = python3.12
 
+[testenv:3.13]
+basepython = python3.13
+
 [testenv:pypy-3.8]
 basepython = pypy3.8
+
+[testenv:pypy-3.9]
+basepython = pypy3.9
+
+[testenv:pypy-3.10]
+basepython = pypy3.10
 
 [testenv:xcode]
 basepython = {env:XCODE_PYTHON}
