--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -28,20 +28,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-24.04, windows-latest, macos-latest]
-        pyver:
-          - cp38
-          - cp39
-          - cp310
-          - cp311
-          - cp312
-          - cp313
-        include:
-          - pyver: cp37
-            os: macos-13
-          - pyver: cp37
-            os: ubuntu-24.04
-          - pyver: cp37
-            os: windows-latest
+        pyver: [cp38, cp39, cp310, cp311, cp312, cp313]
 
     steps:
       - name: Checkout repos
@@ -78,14 +65,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        pyver:
-          - cp37
-          - cp38
-          - cp39
-          - cp310
-          - cp311
-          - cp312
-          - cp313
+        pyver: [cp38, cp39, cp310, cp311, cp312, cp313]
         arch: [aarch64, ppc64le]
 
     steps:
@@ -125,6 +105,7 @@ jobs:
         uses: pypa/cibuildwheel@v2.21.2
         env:
           CIBW_BUILD: pp*
+          CIBW_SKIP: pp37-*
           CIBW_TEST_EXTRAS: test
           CIBW_TEST_COMMAND: pytest --color=yes -m 'not embedded' {project}/tests
           # Passing a space in a param is a b*tch on windows.
@@ -160,6 +141,7 @@ jobs:
         uses: pypa/cibuildwheel@v2.21.2
         env:
           CIBW_BUILD: pp*
+          CIBW_SKIP: pp37-*
 
       # Tests mostly fail because of some confusion with the python interpreter
 
