--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,11 @@
 [tox]
-envlist = 3.7, 3.8, 3.9, 3.10, 3.11, 3.12, 3.13, pypy-3.8, pypy-3.9, pypy-3.10
+envlist = 3.8, 3.9, 3.10, 3.11, 3.12, 3.13, pypy-3.8, pypy-3.9, pypy-3.10
 
 [testenv]
 commands =
     pytest {posargs}
 extras =
     test
-
-[testenv:3.7]
-basepython = python3.7
 
 [testenv:3.8]
 basepython = python3.8
