--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -28,16 +28,17 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-24.04, windows-latest, macos-latest]
-        pyver: [cp38, cp39, cp310, cp311, cp312, cp313]
+        pyver: [cp38, cp39, cp310, cp311, cp312, cp313, cp313t]
 
     steps:
       - name: Checkout repos
         uses: actions/checkout@v4
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.21.2
+        uses: pypa/cibuildwheel@v2.23.3
         env:
           CIBW_BUILD: ${{matrix.pyver}}-*
+          CIBW_ENABLE: cpython-freethreading
           CIBW_ARCHS_LINUX: auto
           CIBW_ARCHS_MACOS: auto universal2
           CIBW_ARCHS_WINDOWS: auto
@@ -65,7 +66,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        pyver: [cp38, cp39, cp310, cp311, cp312, cp313]
+        pyver: [cp38, cp39, cp310, cp311, cp312, cp313, cp313t]
         arch: [aarch64, ppc64le]
 
     steps:
@@ -76,9 +77,10 @@ jobs:
         uses: docker/setup-qemu-action@v3
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.21.2
+        uses: pypa/cibuildwheel@v2.23.3
         env:
           CIBW_BUILD: ${{matrix.pyver}}-*
+          CIBW_ENABLE: cpython-freethreading
           CIBW_ARCHS: ${{matrix.arch}}
 
       # Tests mostly fail because of some confusion with the python interpreter
