--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = 3.8, 3.9, 3.10, 3.11, 3.12, 3.13, pypy-3.8, pypy-3.9, pypy-3.10
+envlist = 3.8, 3.9, 3.10, 3.11, 3.12, 3.13, 3.13t, pypy-3.8, pypy-3.9, pypy-3.10
 
 [testenv]
 commands =
@@ -24,6 +24,9 @@ basepython = python3.12
 
 [testenv:3.13]
 basepython = python3.13
+
+[testenv:3.13t]
+basepython = python3.13t
 
 [testenv:pypy-3.8]
 basepython = pypy3.8
