--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = 3.8, 3.9, 3.10, 3.11, 3.12, 3.13, 3.13t, pypy-3.8, pypy-3.9, pypy-3.10
+envlist = 3.8, 3.9, 3.10, 3.11, 3.12, 3.13, 3.13t, 3.14, 3.14t, pypy-3.8, pypy-3.9, pypy-3.10, pypy-3.11
 
 [testenv]
 commands =
@@ -28,6 +28,12 @@ basepython = python3.13
 [testenv:3.13t]
 basepython = python3.13t
 
+[testenv:3.14]
+basepython = python3.14
+
+[testenv:3.14t]
+basepython = python3.14t
+
 [testenv:pypy-3.8]
 basepython = pypy3.8
 
@@ -36,6 +42,9 @@ basepython = pypy3.9
 
 [testenv:pypy-3.10]
 basepython = pypy3.10
+
+[testenv:pypy-3.11]
+basepython = pypy3.11
 
 [testenv:xcode]
 basepython = {env:XCODE_PYTHON}
