--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -28,21 +28,19 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-24.04, windows-latest, macos-latest]
-        pyver: [cp38, cp39, cp310, cp311, cp312, cp313, cp313t]
+        pyver: [cp38, cp39, cp310, cp311, cp312, cp313, cp313t, cp314, cp314t]
 
     steps:
       - name: Checkout repos
         uses: actions/checkout@v4
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.23.3
+        uses: pypa/cibuildwheel@v3.1.4
         env:
           CIBW_BUILD: ${{matrix.pyver}}-*
-          CIBW_ENABLE: cpython-freethreading
           CIBW_ARCHS_LINUX: auto
           CIBW_ARCHS_MACOS: auto universal2
           CIBW_ARCHS_WINDOWS: auto
-          CIBW_TEST_EXTRAS: test
           CIBW_TEST_COMMAND: pytest --color=yes -m 'not embedded' {project}/tests
           # Passing a space in a param is a b*tch on windows.
           # However embedded tests are skipped anyway there.
@@ -52,7 +50,6 @@ jobs:
           CIBW_TEST_SKIP: >-
             *-musllinux_*
             *-macosx_universal2:arm64
-            pp*-macosx_*
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -66,7 +63,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        pyver: [cp38, cp39, cp310, cp311, cp312, cp313, cp313t]
+        pyver: [cp38, cp39, cp310, cp311, cp312, cp313, cp313t, cp314, cp314t]
         arch: [aarch64, ppc64le]
 
     steps:
@@ -77,10 +74,9 @@ jobs:
         uses: docker/setup-qemu-action@v3
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.23.3
+        uses: pypa/cibuildwheel@v3.1.4
         env:
           CIBW_BUILD: ${{matrix.pyver}}-*
-          CIBW_ENABLE: cpython-freethreading
           CIBW_ARCHS: ${{matrix.arch}}
 
       # Tests mostly fail because of some confusion with the python interpreter
@@ -104,11 +100,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.21.2
+        uses: pypa/cibuildwheel@v3.1.4
         env:
           CIBW_BUILD: pp*
-          CIBW_SKIP: pp37-*
-          CIBW_TEST_EXTRAS: test
           CIBW_TEST_COMMAND: pytest --color=yes -m 'not embedded' {project}/tests
           # Passing a space in a param is a b*tch on windows.
           # However embedded tests are skipped anyway there.
@@ -117,7 +111,6 @@ jobs:
           # cross-build macos images can't be tested on this runner.
           CIBW_TEST_SKIP: >-
             *-musllinux_*
-            *-macosx_universal2:arm64
             pp*-macosx_*
 
       - name: Upload artifacts
@@ -129,8 +122,6 @@ jobs:
 
   build-cross-wheel-pypy:
     runs-on: ubuntu-24.04
-    strategy:
-      fail-fast: false
 
     steps:
       - name: Checkout repos
@@ -140,10 +131,9 @@ jobs:
         uses: docker/setup-qemu-action@v3
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.21.2
+        uses: pypa/cibuildwheel@v3.1.4
         env:
           CIBW_BUILD: pp*
-          CIBW_SKIP: pp37-*
 
       # Tests mostly fail because of some confusion with the python interpreter
 
