ci: add support for riscv64 architecture
Upgrade to the latest cibuildwheel release (v3.2.1) to enable
official support for the riscv64 architecture. This allows
building and publishing riscv64 wheels alongside existing targets.

cibuildwheel uses quay.io/pypa/manylinux_2_39_riscv64 for riscv64 builds,
which is based on Rocky Linux 10 and does not include the `ps` utility by default.
Add a cibuildwheel override to install `procps-ng`, ensuring tests that
rely on `ps` do not fail.

Signed-off-by: Julien Stephan <jstephan@baylibre.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,7 @@ enable = [
     "pypy",
 ]
 test-extras = ["test"]
+
+[[tool.cibuildwheel.overrides]]
+select = "*riscv64*"
+before-all = ["dnf install -y --setopt=install_weak_deps=False procps-ng"]
