--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v3.1.4
+        uses: pypa/cibuildwheel@v3.2.1
         env:
           CIBW_BUILD: ${{matrix.pyver}}-*
           CIBW_ARCHS_LINUX: auto
@@ -64,7 +64,7 @@ jobs:
       fail-fast: false
       matrix:
         pyver: [cp310, cp311, cp312, cp313, cp313t, cp314, cp314t]
-        arch: [aarch64, ppc64le]
+        arch: [aarch64, ppc64le, riscv64]
 
     steps:
       - name: Checkout repos
@@ -74,7 +74,7 @@ jobs:
         uses: docker/setup-qemu-action@v3
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v3.1.4
+        uses: pypa/cibuildwheel@v3.2.1
         env:
           CIBW_BUILD: ${{matrix.pyver}}-*
           CIBW_ARCHS: ${{matrix.arch}}
@@ -100,7 +100,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v3.1.4
+        uses: pypa/cibuildwheel@v3.2.1
         env:
           CIBW_BUILD: pp*
           CIBW_TEST_COMMAND: pytest --color=yes -m 'not embedded' {project}/tests
@@ -131,7 +131,7 @@ jobs:
         uses: docker/setup-qemu-action@v3
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v3.1.4
+        uses: pypa/cibuildwheel@v3.2.1
         env:
           CIBW_BUILD: pp*
 
