tests: skip specific tests under QEMU emulation
Previously, CI skipped tests on emulated architectures due to
interpreter detection issues. Add a pytest marker (`skip_on_qemu`)
to selectively skip tests, allowing other tests to run under
QEMU emulation.

Signed-off-by: Julien Stephan <jstephan@baylibre.com>

--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -78,8 +78,7 @@ jobs:
         env:
           CIBW_BUILD: ${{matrix.pyver}}-*
           CIBW_ARCHS: ${{matrix.arch}}
-
-      # Tests mostly fail because of some confusion with the python interpreter
+          CIBW_TEST_COMMAND: pytest --color=yes -m 'not embedded and not skip_on_qemu' {project}/tests
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
