--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -100,11 +100,11 @@ jobs:
           - macos-latest
         include:
           - python-version: 3.8
-            os: macos-13
+            os: macos-15-intel
           - python-version: 3.9
-            os: macos-13
+            os: macos-15-intel
           - python-version: "3.10"
-            os: macos-13
+            os: macos-15-intel
 
     steps:
       - name: Checkout repos
