--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,11 @@
 [tox]
-envlist = 3.8, 3.9, 3.10, 3.11, 3.12, 3.13, 3.13t, 3.14, 3.14t, pypy-3.8, pypy-3.9, pypy-3.10, pypy-3.11
+envlist = 3.10, 3.11, 3.12, 3.13, 3.13t, 3.14, 3.14t, pypy-3.8, pypy-3.9, pypy-3.10, pypy-3.11
 
 [testenv]
 commands =
     pytest {posargs}
 extras =
     test
-
-[testenv:3.8]
-basepython = python3.8
-
-[testenv:3.9]
-basepython = python3.9
 
 [testenv:3.10]
 basepython = python3.10
